Bug 1836805: test(webgpu): re-enable Linux CI r=webgpu-reviewers,taskgraph-reviewers,jmaher,jimb
Differential Revision: https://phabricator.services.mozilla.com/D184862

--- a/taskcluster/ci/test/web-platform.yml
+++ b/taskcluster/ci/test/web-platform.yml
@@ -228,8 +228,7 @@ web-platform-tests-webgpu:
         by-test-platform:
             android.*: []  # Out of scope
             macos.*: []  # Disabled
-            linux.*: []  # Broken on CI; follow-up at https://bugzilla.mozilla.org/show_bug.cgi?id=webgpu-v1-cts-linux
-            .*wayland.*: []
+            linux1804.*: []  # We don't support anything less than Mesa Lavapipe 22.1.2, so this is _out_.
             default: ['trunk']
     mozharness:
         chunked: true
