--- a/testing/web-platform/mozilla/meta/webgpu/chunked/1/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/1/cts.https.html.ini
@@ -27,6 +27,9 @@
 
 
 [cts.https.html?q=webgpu:api,operation,buffers,map_oom:mappedAtCreation:*]
+  # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
+  disabled:
+    if os == "linux": true
 
 [cts.https.html?q=webgpu:api,operation,buffers,map:mappedAtCreation,mapState:*]
 
@@ -54,6 +57,9 @@
 
 
 [cts.https.html?q=webgpu:api,operation,buffers,map_oom:mapAsync:*]
+  # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
+  disabled:
+    if os == "linux": true
   [:oom=true;size=9007199254740984]
     expected: FAIL
 
@@ -75,16 +81,24 @@
     expected: FAIL
 
   [:mapAsyncRegionLeft="explicit-expand";mapAsyncRegionRight="explicit-expand"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:mapAsyncRegionLeft="explicit-expand";mapAsyncRegionRight="minimal"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:mapAsyncRegionLeft="minimal";mapAsyncRegionRight="default-expand"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:mapAsyncRegionLeft="minimal";mapAsyncRegionRight="explicit-expand"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:mapAsyncRegionLeft="minimal";mapAsyncRegionRight="minimal"]
     expected: FAIL
@@ -112,16 +126,24 @@
     expected: FAIL
 
   [:mapAsyncRegionLeft="explicit-expand";mapAsyncRegionRight="minimal"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:mapAsyncRegionLeft="minimal";mapAsyncRegionRight="default-expand"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:mapAsyncRegionLeft="minimal";mapAsyncRegionRight="explicit-expand"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:mapAsyncRegionLeft="minimal";mapAsyncRegionRight="minimal"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
 
 [cts.https.html?q=webgpu:api,operation,adapter,requestDevice:features,unknown:*]
