--- a/testing/web-platform/mozilla/meta/webgpu/chunked/19/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/19/cts.https.html.ini
@@ -84,9 +84,13 @@
 
   [:errorFilter="out-of-memory";stackDepth=100000]
     expected: [PASS, TIMEOUT]
+    disabled:
+      if os == "linux": true
 
   [:errorFilter="validation";stackDepth=100000]
     expected: [PASS, TIMEOUT]
+    disabled:
+      if os == "linux": true
 
 [cts.https.html?q=webgpu:api,validation,error_scope:balanced_siblings:*]
 
