--- a/testing/web-platform/mozilla/meta/webgpu/chunked/2/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/2/cts.https.html.ini
@@ -2,6 +2,7 @@
 
 [cts.https.html?q=webgpu:api,operation,command_buffer,copyTextureToTexture:color_textures,compressed,non_array:*]
   disabled:
+    if os == "linux": https://bugzilla.mozilla.org/show_bug.cgi?id=1844779
     if os == "win": https://bugzilla.mozilla.org/show_bug.cgi?id=1844779
 
 [cts.https.html?q=webgpu:api,operation,command_buffer,copyTextureToTexture:copy_depth_stencil:*]
@@ -45,6 +46,7 @@
 
 [cts.https.html?q=webgpu:api,operation,command_buffer,copyTextureToTexture:color_textures,compressed,array:*]
   disabled:
+    if os == "linux": https://bugzilla.mozilla.org/show_bug.cgi?id=1844779
     if os == "win": https://bugzilla.mozilla.org/show_bug.cgi?id=1844779
 
 [cts.https.html?q=webgpu:api,operation,command_buffer,image_copy:origins_and_extents:*]
