--- a/testing/web-platform/mozilla/meta/webgpu/chunked/22/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/22/cts.https.html.ini
@@ -23,6 +23,14 @@
 [cts.https.html?q=webgpu:api,validation,render_pass,attachment_compatibility:render_pass_or_bundle_and_pipeline,color_count:*]
 
 [cts.https.html?q=webgpu:api,validation,render_pass,attachment_compatibility:render_pass_or_bundle_and_pipeline,color_format:*]
+  [:encoderType="render%20pass"]
+    expected:
+      if os == "win": [PASS, FAIL]
+
+  [:encoderType="render%20bundle"]
+    expected:
+      if os == "win": [PASS, FAIL]
+
 
 [cts.https.html?q=webgpu:api,validation,queue,writeBuffer:buffer_state:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
