--- a/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
@@ -14,7 +14,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -23,7 +25,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -32,7 +36,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -55,7 +61,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -64,7 +72,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -192,7 +202,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -201,7 +213,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -210,7 +224,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -222,16 +238,20 @@
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_mixed:*]
   [:name="ArithAndLogical"]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:name="LogicalAndArith"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:name="ArithAndLogical_ShortCircuit"]
     expected: FAIL
 
   [:name="LogicalAndArith_ShortCircuit"]
     expected: FAIL
+
 
 [cts.https.html?q=webgpu:examples:gpu,with_texture_compression,etc2:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -240,6 +260,7 @@
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:index_accessor:*]
   [:name="LeftSE"]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:name="RightSE"]
@@ -252,10 +273,13 @@
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:call:*]
   [:name="OneSE"]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:name="AllSE"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:name="MiddleNotSE"]
     expected: FAIL
@@ -379,7 +403,9 @@
     expected: FAIL
 
   [:type="i32";inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:type="i32";inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -388,7 +414,9 @@
     expected: FAIL
 
   [:type="i32";inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:type="i32";inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -448,10 +476,13 @@
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_arith:*]
   [:name="BothSE"]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:name="LeftSE"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:name="RightSE"]
     expected: FAIL
@@ -485,6 +516,7 @@
 
   [:name="SEAndMemberAccess"]
     expected: FAIL
+
 
 [cts.https.html?q=webgpu:idl,constants,flags:BufferUsage,count:*]
 
@@ -527,6 +559,7 @@
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:member_accessor:*]
   [:name="Vec"]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:name="Struct"]
@@ -541,10 +574,13 @@
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_logical:*]
   [:name="BothSE"]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:name="LeftSE"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:name="RightSE"]
     expected: FAIL
@@ -580,6 +616,7 @@
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:type_constructor:*]
   [:name="Struct"]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:name="Array1D"]
