--- a/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
@@ -28,7 +28,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize="_undef_"]
-    expected: [FAIL, PASS]
+    expected:
+      if os == "linux": [PASS, FAIL]
+      [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=2]
     expected: FAIL
@@ -40,7 +42,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize="_undef_"]
-    expected: [FAIL, PASS]
+    expected:
+      if os == "linux": [PASS, FAIL]
+      [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=2]
     expected: FAIL
@@ -110,7 +114,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -119,7 +125,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -129,6 +137,7 @@
 
   [:inputSource="storage_rw";vectorize=2]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:inputSource="storage_rw";vectorize=3]
@@ -157,6 +166,7 @@
 
   [:inputSource="uniform";vectorize=2]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:inputSource="uniform";vectorize=3]
@@ -175,7 +185,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -214,7 +226,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [PASS, FAIL]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -223,7 +237,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -247,6 +263,7 @@
 
   [:inputSource="uniform";vectorize=2]
     expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": FAIL
 
   [:inputSource="uniform";vectorize=3]
@@ -256,7 +273,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -315,7 +334,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";overload="vec3"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";overload="vec4"]
     expected: FAIL
@@ -353,7 +374,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -392,7 +415,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";overload="vec3"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";overload="vec4"]
     expected: FAIL
@@ -401,7 +426,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";overload="vec3"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";overload="vec4"]
     expected: FAIL
@@ -433,7 +460,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -480,7 +509,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -489,7 +520,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
