--- a/testing/web-platform/mozilla/meta/webgpu/chunked/35/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/35/cts.https.html.ini
@@ -80,7 +80,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -89,7 +91,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
