--- a/testing/web-platform/mozilla/meta/webgpu/chunked/36/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/36/cts.https.html.ini
@@ -25,7 +25,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -34,7 +36,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -71,7 +75,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -80,7 +86,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -124,7 +132,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [PASS, FAIL]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -168,6 +178,7 @@
 
   [:inputSource="storage_r";vectorize=2]
     expected:
+      if os == "linux": [FAIL, PASS]
       if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
@@ -361,7 +372,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: [FAIL, PASS]
+    expected:
+      if os == "linux": [PASS, FAIL]
+      [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -413,7 +426,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -451,7 +466,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -460,7 +477,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
