--- a/testing/web-platform/mozilla/meta/webgpu/chunked/39/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/39/cts.https.html.ini
@@ -27,6 +27,9 @@
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_vec4_fract:*]
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,pow:f32:*]
+  disabled:
+    if os == "linux": true
+
   [:inputSource="const";vectorize="_undef_"]
     expected: FAIL
 
