--- a/testing/web-platform/mozilla/meta/webgpu/chunked/41/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/41/cts.https.html.ini
@@ -26,7 +26,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -35,7 +37,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -112,7 +116,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -136,7 +142,9 @@
     expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -173,7 +181,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -182,7 +192,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -223,7 +235,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -298,7 +312,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize="_undef_"]
-    expected: [FAIL, PASS]
+    expected:
+      if os == "linux": [PASS, FAIL]
+      [FAIL, PASS]
 
   [:inputSource="uniform";vectorize=2]
     expected: [FAIL, PASS]
@@ -310,7 +326,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize="_undef_"]
-    expected: [FAIL, PASS]
+    expected:
+      if os == "linux": [PASS, FAIL]
+      [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=2]
     expected: [FAIL, PASS]
@@ -322,7 +340,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize="_undef_"]
-    expected: FAIL
+    expected:
+      if os == "linux": PASS
+      FAIL
 
   [:inputSource="storage_rw";vectorize=2]
     expected: [FAIL, PASS]
@@ -361,7 +381,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
