--- a/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
@@ -20,6 +20,10 @@
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,unpack2x16float:unpack:*]
+  # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
+  # Crashes on Linux
+  disabled:
+    if os == "linux": true
   [:inputSource="const"]
     expected: FAIL
 
@@ -38,7 +42,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -47,7 +53,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -85,7 +93,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -94,7 +104,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -103,7 +115,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -113,6 +127,8 @@
 
 
 [cts.https.html?q=webgpu:shader,execution,memory_model,atomicity:atomicity:*]
+  expected:
+    if os == "linux": [OK, TIMEOUT]
   [:memType="atomic_storage";testType="inter_workgroup"]
     expected: FAIL
 
@@ -120,7 +136,9 @@
     expected: FAIL
 
   [:memType="atomic_workgroup";testType="intra_workgroup"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,unpack2x16snorm:unpack:*]
@@ -170,7 +188,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [PASS, FAIL]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -216,7 +236,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -234,7 +256,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
