--- a/testing/web-platform/mozilla/meta/webgpu/chunked/5/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/5/cts.https.html.ini
@@ -10,196 +10,334 @@
 [cts.https.html?q=webgpu:api,operation,render_pipeline,pipeline_output_targets:color,component_count:*]
 
 [cts.https.html?q=webgpu:api,operation,render_pass,storeOp:render_pass_store_op,multiple_color_attachments:*]
+  [:storeOperation1="store";storeOperation2="store"]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
 
 [cts.https.html?q=webgpu:api,operation,render_pass,storeOp:render_pass_store_op,color_attachment_only:*]
+  expected:
+    if os == "linux": [OK, TIMEOUT]
   [:colorFormat="r8unorm";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r8unorm";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r8uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r8uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r8sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r8sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r16uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r16uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r16sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r16sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r16float";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r16float";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg8unorm";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg8unorm";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg8uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg8uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg8sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg8sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r32uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r32uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r32sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r32sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r32float";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="r32float";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg16uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg16uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg16sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg16sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg16float";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg16float";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba8unorm";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba8unorm";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba8unorm-srgb";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba8unorm-srgb";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba8uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba8uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba8sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba8sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="bgra8unorm";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="bgra8unorm";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="bgra8unorm-srgb";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="bgra8unorm-srgb";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgb10a2unorm";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgb10a2unorm";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg32uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg32uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg32sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg32sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg32float";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rg32float";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba16uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba16uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba16sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba16sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba16float";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba16float";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba32uint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba32uint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba32sint";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba32sint";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba32float";storeOperation="discard"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
   [:colorFormat="rgba32float";storeOperation="store"]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      FAIL
 
 
 [cts.https.html?q=webgpu:api,operation,render_pass,storeOp:render_pass_store_op,color_attachment_with_depth_stencil_attachment:*]
+  [:colorStoreOperation="store";depthStencilStoreOperation="discard"]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
+  [:colorStoreOperation="store";depthStencilStoreOperation="store"]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
 
 [cts.https.html?q=webgpu:api,operation,render_pass,storeop2:storeOp_controls_whether_1x1_drawn_quad_is_stored:*]
 
