--- a/testing/web-platform/mozilla/meta/webgpu/chunked/51/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/51/cts.https.html.ini
@@ -449,24 +449,44 @@
   expected: [OK, TIMEOUT]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgb10a2unorm";dstPremultiplied=false;srcDoFlipYDuringCopy=true]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgb10a2unorm";dstPremultiplied=false;srcDoFlipYDuringCopy=false]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba16float";dstPremultiplied=true;srcDoFlipYDuringCopy=true]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba16float";dstPremultiplied=true;srcDoFlipYDuringCopy=false]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba16float";dstPremultiplied=false;srcDoFlipYDuringCopy=true]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba16float";dstPremultiplied=false;srcDoFlipYDuringCopy=false]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba32float";dstPremultiplied=true;srcDoFlipYDuringCopy=true]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba32float";dstPremultiplied=true;srcDoFlipYDuringCopy=false]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba32float";dstPremultiplied=false;srcDoFlipYDuringCopy=true]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba32float";dstPremultiplied=false;srcDoFlipYDuringCopy=false]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="bgra8unorm-srgb";dstPremultiplied=true;srcDoFlipYDuringCopy=false]
     expected: [PASS, TIMEOUT, NOTRUN]
