--- a/testing/web-platform/mozilla/meta/webgpu/chunked/8/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/8/cts.https.html.ini
@@ -27,6 +27,8 @@
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:max_buffers_and_attribs:*]
   [:format="uint8x4"]
+    expected:
+      if os == "linux": [FAIL, PASS]
       if os == "win": [FAIL, PASS]
 
   [:format="sint8x2"]
@@ -235,7 +237,9 @@
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:overlapping_attributes:*]
   [:format="uint8x4"]
-    expected: FAIL
+    expected:
+      if os == "linux": [PASS, FAIL]
+      FAIL
 
   [:format="sint8x2"]
     expected: FAIL
