--- a/testing/web-platform/mozilla/meta/webgpu/chunked/9/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/9/cts.https.html.ini
@@ -24,133 +24,264 @@
   disabled: true
 
 [cts.https.html?q=webgpu:api,validation,buffer,create:usage:*]
+  expected:
+    if os == "linux": [OK, TIMEOUT]
   [:usage1=32;usage2=128]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32;usage2=256]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32;usage2=512]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32;usage2=32768]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=0]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=1]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=2]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=4]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=8]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=16]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=32]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=64]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=128]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=256]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=512]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=64;usage2=32768]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=0]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=1]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=2]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=4]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=8]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=16]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=32]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=64]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=128]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=256]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=512]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=128;usage2=32768]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=0]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=1]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=2]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=4]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=8]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=16]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=32]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=64]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=128]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=256]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=512]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=256;usage2=32768]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=0]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=1]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=2]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=4]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=8]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=16]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=32]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=64]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=128]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=256]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=512]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=512;usage2=32768]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=0]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=1]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=2]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=4]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=8]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=16]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=32]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=64]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=128]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=256]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=512]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
 
   [:usage1=32768;usage2=32768]
+    expected:
+      if os == "linux": [PASS, TIMEOUT, NOTRUN]
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,state,mappingPending:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -172,6 +303,9 @@
 
 [cts.https.html?q=webgpu:api,validation,buffer,create:createBuffer_invalid_and_oom:*]
   [:]
+    # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
+    disabled:
+      if os == "linux": true
     expected:
       if os == "win": FAIL
 
@@ -182,19 +316,50 @@
 
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:index_format,change_pipeline_after_setIndexBuffer:*]
+  [:setPipelineBeforeSetIndexBuffer=true]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,destroy:twice:*]
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:primitive_restart:*]
   [:indexFormat="uint16";primitiveTopology="triangle-list"]
+    expected:
+      if os == "linux": [PASS, FAIL]
 
   [:indexFormat="uint16";primitiveTopology="triangle-strip"]
+    expected:
+      if os == "linux": [PASS, FAIL]
 
   [:indexFormat="uint32";primitiveTopology="point-list"]
+    expected:
+      if os == "linux": [PASS, FAIL]
 
   [:indexFormat="uint32";primitiveTopology="triangle-list"]
+    expected:
+      if os == "linux": [PASS, FAIL]
 
   [:indexFormat="uint32";primitiveTopology="triangle-strip"]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
+  [:indexFormat="uint16";primitiveTopology="line-list"]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
+  [:indexFormat="uint32";primitiveTopology="line-strip"]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
+  [:indexFormat="uint16";primitiveTopology="line-strip"]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
+  [:indexFormat="uint32";primitiveTopology="line-list"]
+    expected:
+      if os == "linux": [PASS, FAIL]
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,destroy:all_usages:*]
 
