--- a/testing/web-platform/mozilla/meta/webgpu/chunked/21/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/21/cts.https.html.ini
@@ -28,6 +28,7 @@
 
 
 [cts.https.html?q=webgpu:api,validation,queue,copyToTexture,CopyExternalImageToTexture:source_canvas,contexts:*]
+  expected: [OK, CRASH]
   [:contextType="2d"]
     expected: FAIL
 
@@ -98,6 +99,8 @@
 
 
 [cts.https.html?q=webgpu:api,validation,queue,copyToTexture,CopyExternalImageToTexture:source_offscreenCanvas,contexts:*]
+  expected:
+    if os == "linux": [OK, CRASH]
   [:contextType="2d"]
     expected: FAIL
 
