--- a/testing/web-platform/mozilla/meta/webgpu/chunked/50/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/50/cts.https.html.ini
@@ -513,435 +513,543 @@
 
   [:canvasType="onscreen";format="r8unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r8snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r8uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r8sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r16uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r16sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r16float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg8unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg8snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg8uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg8sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r32uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r32sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="r32float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg16uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg16sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg16float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba8unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba8snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba8uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba8sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bgra8unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgb10a2unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg11b10ufloat"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgb9e5ufloat"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg32uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg32sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rg32float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba16uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba16sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba16float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba32uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba32sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="rgba32float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="depth32float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="depth16unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="stencil8"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="depth24plus"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="depth24plus-stencil8"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc1-rgba-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc1-rgba-unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc2-rgba-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc2-rgba-unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc3-rgba-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc3-rgba-unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc4-r-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc4-r-snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc5-rg-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc5-rg-snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc6h-rgb-ufloat"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc6h-rgb-float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc7-rgba-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="bc7-rgba-unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r8unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r8snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r8uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r8sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r16uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r16sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r16float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg8unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg8snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg8uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg8sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r32uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r32sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="r32float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg16uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg16sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg16float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba8unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba8snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba8uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba8sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bgra8unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgb10a2unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg11b10ufloat"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgb9e5ufloat"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg32uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg32sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rg32float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba16uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba16sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba16float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba32uint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba32sint"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="rgba32float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="depth32float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="depth16unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="stencil8"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="depth24plus"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="depth24plus-stencil8"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="depth32float-stencil8"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "mac": PASS
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc1-rgba-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc1-rgba-unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc2-rgba-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc2-rgba-unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc3-rgba-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc3-rgba-unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc4-r-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc4-r-snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc5-rg-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc5-rg-snorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc6h-rgb-ufloat"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc6h-rgb-float"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc7-rgba-unorm"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="offscreen";format="bc7-rgba-unorm-srgb"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "win": [PASS, FAIL]
 
   [:canvasType="onscreen";format="depth32float-stencil8"]
     expected:
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       if os == "mac": PASS
       if os == "win": [PASS, FAIL]
 
